- Fix Safari (iPad) post card list layout issue - Removed intercome script - Fix checklist prefix

--- a/_sass/components/_post_card.scss
+++ b/_sass/components/_post_card.scss
@@ -40,8 +40,15 @@
   display: flex;
   flex-wrap: wrap;
 
+  // Safari (iPad)
+  display: -webkit-flex;
+  -webkit-flex-wrap: wrap;
+
   .post-card-wrap {
     display: flex;
+
+    // Safari (iPad)
+    display: -webkit-flex;
   }
 
   .post-card {
