--- a/_sass/components/_theme_card.scss
+++ b/_sass/components/_theme_card.scss
@@ -77,8 +77,15 @@
   display: flex;
   flex-wrap: wrap;
 
+  // Safari (iPad)
+  display: -webkit-flex;
+  -webkit-flex-wrap: wrap;
+
   .theme-card-wrap {
     display: flex;
+
+    // Safari (iPad)
+    display: -webkit-flex;
   }
 
   .theme-card {
