--- a/_sass/sections/_post.scss
+++ b/_sass/sections/_post.scss
@@ -58,7 +58,8 @@
 
       top: 12px;
       left: 0;
-      transform: rotate(45deg) translate(0, -50%);
+      -webkit-transform: rotate(45deg) translate(0, -50%);
+              transform: rotate(45deg) translate(0, -50%);
 
       width: 6px;
       height: 12px;
